<resources>
    <string name="app_name">Валюты</string>
    <string name="aud">AUD</string>
    <string name="_59_22p">59.22P</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="rub">RUB</string>
    <string name="toolbar_title_currency">Валюты</string>
    <string name="ada">ADA</string>
    <string name="_89p">89P</string>
    <string name="date">Дата</string>
    <string name="edit_date">20.03.2022</string>
    <string name="test_name">Австралийский доллар</string>
    <string name="rate">Курс</string>
    <string name="attention">Внимание! \n Не удается получить данные за указанную дату</string>
    <string name="entered_value_greater_zero">Введите значение больше нуля</string>
    <string name="attention_error_get_data">Внимание! \n Произошла ошибка при загрузке данных. \nЗагружены последние данные посещения на </string>
    <string name="attention_state_error">Не удалось получить данные за этот день, пожалуйста выберите другую дату!  </string>
    <string name="search_currency">Поиск валюты</string>
    <string name="close_search">Закрыть поиск</string>
    <string name="eng">ENG</string>
    <string name="ru">RU</string>
    <string name="choose_language">Выберите язык</string>
    <string name="dark_theme">Темная тема</string>
    <string name="light_theme">Светлая тема</string>
    <string name="select_theme">Выберите тему приложения</string>
    <string name="settings">Настройки</string>
    <string name="favorites_display">Отображение избранного</string>
    <string name="tile">Сетка</string>
    <string name="line">Спиок</string>
    <string name="search_hint">Введите валюту</string>
    <string name="calendar">Календарь</string>
    <string name="calculator">Калькулятор</string>
    <string name="_1">1</string>
    <string name="favorites">Избранное</string>
    <string name="add_to_favorites_button">Кнопка добавить в избранное</string>
    <string name="blinking_heart_animation">Анимация мерцающего сердечка</string>
    <string name="icon_when_clicked_which_will_remove_the_currency_from_favorites">Иконка при нажатии на которую происходит удаление валюты из избранного</string>
    <string name="spinning_gear_animation">Аниация вращающейся шестеренки</string>
    <string name="no_internet_connection">Отсутствует интернет подключение</string>
</resources>