<?xml version="1.0" encoding="utf-8"?>
<com.rorono.a22recycler.presentation.customview.CustomCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_card"
    android:backgroundTint="@color/gainsboro"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/radius_card_corner">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:visibility="gone"
        android:src="@drawable/ic_close_24"
        android:contentDescription="@string/icon_when_clicked_which_will_remove_the_currency_from_favorites" />
    <TextView
        android:id="@+id/textViewNameRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/tv_name_rate_layout_margin_bottom"
        android:text="@string/ada"
        android:textSize="@dimen/size_name_currency"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewCurrencyRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_view_currency_rate_layout_margin_top"
        android:text="@string/_89p"
        android:textColor="@color/gray"
        android:textSize="@dimen/size_item_currency_exchange_rate" />

</com.rorono.a22recycler.presentation.customview.CustomCardView>