<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_card"
    android:backgroundTint="@color/gainsboro"
    app:cardCornerRadius="@dimen/radius_card_corner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_view_list_chosen_currency_linear_layout_margin_bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/iv_close_margin_top"
            android:layout_marginStart="@dimen/iv_close_margin_start"
            android:src="@drawable/ic_close_24"
            android:contentDescription="@string/icon_when_clicked_which_will_remove_the_currency_from_favorites" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_full_name_layout_margin_top"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="@dimen/size_name_currency"
            tools:text="ФУНТ СТЕРЛИНГОВ СОЕДИНЕННОГО КОРОЛЕВСТВА" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/item_list_chosen_currency_ll_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNameRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tv_name_rate_margin_start"
                android:layout_weight="1"
                android:textSize="@dimen/size_name_currency"
                tools:ignore="MissingConstraints"
                tools:text="@string/ada" />

            <TextView
                android:id="@+id/textViewExchangeRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_20_dp"
                android:textColor="@color/gray"
                android:textSize="@dimen/size_name_currency"
                tools:ignore="MissingConstraints"
                tools:text="@string/_89p" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>