<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_fragment2"
    android:orientation="vertical"
    tools:context=".presentation.CalculateCurrencyFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarCurrencyCalculateFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/arrow"
        app:title="@string/calculator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerSelectedCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:entries="@array/charCode" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_text_view_fragment_currency_transfer"
                android:layout_marginTop="@dimen/text_view_margin_top_fragment_currency_transfer"
                android:text="@string/rate"
                android:textColor="@color/hint_currency"
                android:textSize="@dimen/size_text_view_rate" />

            <TextView
                android:id="@+id/tvRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_text_view_fragment_currency_transfer"
                android:layout_marginTop="@dimen/text_view_fragment_currency_transfer"
                android:layout_marginBottom="@dimen/margin_bottonechangerate"
                android:text="@string/_1"
                android:textColor="@color/black_currency"
                android:textSize="@dimen/text_size_exchange_rate_transfer_fragmnet"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerTransferredCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:entries="@array/charCode" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_text_view_fragment_currency_transfer"
                android:layout_marginTop="@dimen/text_view_margin_top_fragment_currency_transfer"
                android:text="@string/rate"
                android:textColor="@color/hint_currency"
                android:textSize="@dimen/size_text_view_rate" />

            <TextView
                android:id="@+id/tvRateConvertedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_text_view_fragment_currency_transfer"
                android:layout_marginTop="@dimen/text_view_fragment_currency_transfer"
                android:layout_marginBottom="@dimen/margin_bottonechangerate"
                android:text="@string/_59_22p"
                android:textColor="@color/black_currency"
                android:textSize="@dimen/text_size_exchange_rate_transfer_fragmnet"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCurrencyAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_currency_transfer"
            android:layout_marginTop="@dimen/margin_bottonechangerate"
            android:layout_marginEnd="@dimen/text_input_layout_margin_end"
            app:boxStrokeColor="@color/blu"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/blu"
            tools:hint="AUD">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCurrencyAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_0"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCurrencyConvertedTo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_currency_transfer"
            android:layout_marginTop="@dimen/text_input_layout_margin_top"
            android:layout_marginEnd="@dimen/text_input_layout_margin_end"
            android:hint="@string/rub"
            app:boxStrokeColor="@color/blu"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/blu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCurrencyConvertedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:hint="@string/_0"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>